--- a/my-app/src/styles/GameHistoryItem.css
+++ b/my-app/src/styles/GameHistoryItem.css
@@ -1,7 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald");
+
 .game-history-item {
     display: inline-block;
-    height: 180px;
-    margin: auto;
+    position: fixed;
+    right: 35vw;
+    height: auto;
+    font-family: Oswald, Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
     background-color: grey;
     border-width: 5px;
     border-color: black;
@@ -13,12 +18,24 @@
     display: flex;
     vertical-align: middle;
     align-items: center;
+    min-height: 125px;
+}
+
+.game-history-item .game-history-container .game-details,
+.game-history-item .revealed-art {
+    flex-grow: 1;
+    flex-shrink: 1;
+    transition: height 1s;
 }
 
 .game-history-item .revealed-art {
-    height: 150px;
+    height: 110px;
     border-radius: 10px;
-    margin: 15px;
+    margin: 5px;
+}
+
+.game-history-item .revealed-art:hover {
+    height: 200px;
 }
 
 .game-history-item .revealed-art-container {
@@ -29,28 +46,31 @@
 .game-history-item .game-details {
     display: flex;
     flex-direction: column;
-    height: 150px;
+    height: auto;
+    width: 30vw;
     vertical-align: middle;
-    margin: 15px;
+    margin: 5px;
 }
 
 .game-history-item .game-details .game-title {
+    font-size: large;
+    margin: 15px;
 }
 
 .game-history-item .revealed-tags {
-    width: 500px;
     overflow: hidden;
     animation: 1s ease-in 0s 1 slide-down;
 }
 
 .game-history-item .revealed-tags .revealed-tag {
+    font-size: small;
     display: inline-block;
     height: 20px;
-    background-color: midnightblue;
+    background-color: black;
     color: white;
-    border-radius: 5px;
-    margin: 2px;
-    padding: 2px;
+    border-radius: 3px;
+    margin: 1px;
+    padding: 1px;
 }
 
 @keyframes slide-out {
@@ -58,7 +78,7 @@
         width: 0px;
     }
     100% {
-        width: 320.992px;
+        width: 245.344px;
     }
 }
 
@@ -67,6 +87,6 @@
         height: 0px;
     }
     100% {
-        height: 120px;
+        height: 50px;
     }
 }
