Players can skip, skipping twice draws, you can view all details of a game once it ends

--- a/my-app/src/styles/GameHistoryItem.css
+++ b/my-app/src/styles/GameHistoryItem.css
@@ -71,6 +71,11 @@
     padding: 1px;
 }
 
+.game-history-item .game-details .view-details-button {
+    width: 100px;
+    align-self: center;
+}
+
 @keyframes slide-out {
     0% {
         width: 0px;
