--- a/my-app/src/styles/GameHistoryItem.css
+++ b/my-app/src/styles/GameHistoryItem.css
@@ -8,7 +8,7 @@
     font-weight: 400;
     border-style: none;
     border-radius: 10px;
-    padding: 5px;
+    padding: 0.5vw;
 }
 
 .game-history-item.player-one {
@@ -56,7 +56,7 @@
     height: auto;
     width: 30vw;
     vertical-align: middle;
-    margin: 5px;
+    margin: 1vw;
 }
 
 .game-history-item .game-counter {
